--- a/kernel/printk/Makefile
+++ b/kernel/printk/Makefile
@@ -1,5 +1,3 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
-obj-y += console.o
-obj-y += printk.o
+obj-y += console.o printk.o
 obj-$(CONFIG_EARLYCON) += earlycon.o
-obj-$(CONFIG_EARLYCON) += bootcon.o
