--- a/usr/command/Kconfig
+++ b/usr/command/Kconfig
@@ -10,6 +10,10 @@ config KCMD_BASE64
     bool "Base64 Command Support"
     default y
 
+config KCMD_BASENAME
+    bool "Basename Command Support"
+    default y
+
 config KCMD_BREAK
     bool "Break Command Support"
     default y
