Function: Added the initial extable framework.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/arch/x86/Makefile
+++ b/arch/x86/Makefile
@@ -1,7 +1,7 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += boot/ lib/ mm/
 obj-y += setup.o nmi.o
-obj-y += idt.o irq.o traps.o
+obj-y += idt.o irq.o traps.o extable.o
 obj-y += e820.o tsc.o syscall.o
 obj-y += earlycon-vga.o earlycon-serial.o
 
