--- a/include/asm-generic/Makefile
+++ b/include/asm-generic/Makefile
@@ -4,6 +4,7 @@ mandatory-y += barrier.h
 mandatory-y += bitops.h
 mandatory-y += bug.h
 mandatory-y += errno.h
+mandatory-y += extable.h
 mandatory-y += delay.h
 mandatory-y += io.h
 mandatory-y += linkage.h
