--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -5,7 +5,7 @@ obj-y += printk/ binfmt/ time/
 obj-y += namespace/ task/
 obj-y += kthread.o kcoro.o entry.o
 obj-y += notifier.o pevent.o
-obj-y += crash.o panic.o
+obj-y += crash.o extable.o panic.o
 obj-y += syscall.o random.o
 obj-y += resource.o power.o
 obj-$(CONFIG_UBSAN) += ubsan.o
