Function: Added silent command to mask output information.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/usr/command/Kconfig
+++ b/usr/command/Kconfig
@@ -110,6 +110,10 @@ config KCMD_SEQ
     bool "Seq Command Support"
     default y
 
+config KCMD_SILENT
+    bool "Silent Command Support"
+    default y
+
 config KCMD_SLEEP
     bool "Sleep Command Support"
     default y
