Function: Added initial wakequeue framework.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/kernel/sched/Makefile
+++ b/kernel/sched/Makefile
@@ -1,6 +1,7 @@
 # SPDX-License-Identifier: GPL-2.0
 obj-y += sched.o core.o prio.o
 obj-y += errno.o idle.o sleep.o
-obj-y += waitqueue.o completion.o
+obj-y += completion.o
+obj-y += waitqueue.o wakequeue.o
 obj-$(CONFIG_SCHED_RR) += rr.o
 obj-$(CONFIG_SCHED_FIFO) += fifo.o
