Function: Added unit test of pid control algorithm.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/usr/selftest/filter/Kconfig
+++ b/usr/selftest/filter/Kconfig
@@ -16,4 +16,8 @@ config SELFTEST_FILTER_MEDIAN
     bool "Median Unit Tests"
     default y
 
+config SELFTEST_FILTER_PIDC
+    bool "Pidc Unit Tests"
+    default y
+
 endif # SELFTEST_FILTER
