--- a/drivers/i2c/Kconfig
+++ b/drivers/i2c/Kconfig
@@ -3,6 +3,9 @@ menuconfig I2C
     bool "Inter Integrated Circuit (I2C) Support"
 if I2C
 
+config I2C_BITBANGING
+    bool "I2C Bitbanging Support"
+
 config I2C_I801
     bool "Intel 82801 Support"
     depends on ARCH_X86 && PCI
