Function: Added the initial gpio command for controlling io.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/usr/command/Kconfig
+++ b/usr/command/Kconfig
@@ -54,6 +54,10 @@ config KCMD_GOTO
     bool "Goto Command Support"
     default y
 
+config KCMD_GPIO
+    bool "Gpio Command Support"
+    default y
+
 config KCMD_GREP
     bool "Grep Command Support"
     default y
