--- a/drivers/i2c/core/Makefile
+++ b/drivers/i2c/core/Makefile
@@ -1,3 +1,4 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
-obj-y += core.o
+obj-y += core.o ops.o
+obj-$(CONFIG_I2C_DT) += dt.o
 obj-$(CONFIG_I2C_BITBANGING) += bitbang.o
