Function: Added crypto support for base32.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/lib/crypto/Makefile
+++ b/lib/crypto/Makefile
@@ -1,6 +1,7 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += aes.o
 obj-y += ascii85.o
+obj-y += base32.o
 obj-y += base64.o
 obj-y += chacha.o
 obj-y += crc-ccitt.o
