Function: Added kshell support for base32 command.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/usr/command/Kconfig
+++ b/usr/command/Kconfig
@@ -6,6 +6,10 @@ config KCMD_ASCII85
     bool "Ascii85 Command Support"
     default y
 
+config KCMD_BASE32
+    bool "Base32 Command Support"
+    default y
+
 config KCMD_BASE64
     bool "Base64 Command Support"
     default y
