--- a/usr/command/Makefile
+++ b/usr/command/Makefile
@@ -1,6 +1,7 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += arch/
 obj-$(CONFIG_KCMD_ASCII85)  += ascii85.o
+obj-$(CONFIG_KCMD_BASE32)   += base32.o
 obj-$(CONFIG_KCMD_BASE64)   += base64.o
 obj-$(CONFIG_KCMD_BASENAME)	+= basename.o
 obj-$(CONFIG_KCMD_BREAK)    += break.o
