--- a/usr/selftest/lib/Makefile
+++ b/usr/selftest/lib/Makefile
@@ -3,6 +3,7 @@ obj-$(CONFIG_SELFTEST_LIB_BITOPS)   += bitops.o
 obj-$(CONFIG_SELFTEST_LIB_BTREE)    += btree.o
 obj-$(CONFIG_SELFTEST_LIB_DIV64)    += div64.o
 obj-$(CONFIG_SELFTEST_LIB_DCALL)    += dynamic-call.o
+obj-$(CONFIG_SELFTEST_LIB_FMTDUMP)  += fmtdump.o
 obj-$(CONFIG_SELFTEST_LIB_GLOB)     += glob.o
 obj-$(CONFIG_SELFTEST_LIB_HEAP)     += heap.o
 obj-$(CONFIG_SELFTEST_LIB_HLIST)    += hlist.o
@@ -12,7 +13,6 @@ obj-$(CONFIG_SELFTEST_LIB_JSON)     += json.o
 obj-$(CONFIG_SELFTEST_LIB_LIBCPIO)	+= libcpio.o
 obj-$(CONFIG_SELFTEST_LIB_KFIFO)    += kfifo.o
 obj-$(CONFIG_SELFTEST_LIB_LIST)     += list.o
-obj-$(CONFIG_SELFTEST_LIB_MEMDUMP)  += memdump.o
 obj-$(CONFIG_SELFTEST_LIB_MINPOOL)  += minpool.o
 obj-$(CONFIG_SELFTEST_LIB_NCACHE)   += ncache.o
 obj-$(CONFIG_SELFTEST_LIB_RANGE)    += range.o
