Function: Initial added arch cache prefetch framework.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/include/asm-generic/Makefile
+++ b/include/asm-generic/Makefile
@@ -12,6 +12,7 @@ mandatory-y += linkage.h
 mandatory-y += mmiowb.h
 mandatory-y += percpu.h
 mandatory-y += pgalloc.h
+mandatory-y += prefetch.h
 mandatory-y += rwonce.h
 mandatory-y += unaligned.h
 mandatory-y += spinlock-types.h
