Function: Added crc7 and crc4 to crypto library.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/lib/crypto/Makefile
+++ b/lib/crypto/Makefile
@@ -9,6 +9,8 @@ obj-y += crc-ccittf.o
 obj-y += crc-itut.o
 obj-y += crc-rocksoft.o
 obj-y += crc-t10dif.o
+obj-y += crc4.o
+obj-y += crc7.o
 obj-y += crc8.o
 obj-y += crc16.o
 obj-y += crc32.o
