--- a/usr/selftest/benchmark/Makefile
+++ b/usr/selftest/benchmark/Makefile
@@ -1,4 +1,15 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
+obj-$(CONFIG_SELFTEST_MARK_CRC4) += crc4.o
+obj-$(CONFIG_SELFTEST_MARK_CRC7) += crc7.o
+obj-$(CONFIG_SELFTEST_MARK_CRC8) += crc8.o
+obj-$(CONFIG_SELFTEST_MARK_CRC16) += crc16.o
+obj-$(CONFIG_SELFTEST_MARK_CRC32) += crc32.o
+obj-$(CONFIG_SELFTEST_MARK_CRC64) += crc64.o
+obj-$(CONFIG_SELFTEST_MARK_CRC_CCITT) += crc-ccitt.o
+obj-$(CONFIG_SELFTEST_MARK_CRC_CCITTF) += crc-ccittf.o
+obj-$(CONFIG_SELFTEST_MARK_CRC_ITUT) += crc-itut.o
+obj-$(CONFIG_SELFTEST_MARK_CRC_T10DIF) += crc-t10dif.o
+obj-$(CONFIG_SELFTEST_MARK_CRC_ROCKSOFT) += crc-rocksoft.o
 obj-$(CONFIG_SELFTEST_MARK_MEMCHR) += memchr.o
 obj-$(CONFIG_SELFTEST_MARK_MEMCMP) += memcmp.o
 obj-$(CONFIG_SELFTEST_MARK_MEMCPY) += memcpy.o
