Function: Added bezier3 selftest
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/usr/selftest/Kconfig
+++ b/usr/selftest/Kconfig
@@ -17,6 +17,8 @@ source "usr/selftest/kshell/Kconfig"
 
 source "usr/selftest/lib/Kconfig"
 
+source "usr/selftest/math/Kconfig"
+
 source "usr/selftest/memory/Kconfig"
 
 endif
