Function: Added compilation system support for gettext files.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,7 @@
 /include/config/
 /include/generated/
 /arch/*/include/generated/
+/doc/translate/*.mo
+/doc/translate/*/*.mo
 /lightcore
 /bochsout.txt
