--- a/usr/command/Makefile
+++ b/usr/command/Makefile
@@ -11,7 +11,8 @@ obj-$(CONFIG_KCMD_CONTINUE)	+= continue.o
 obj-$(CONFIG_KCMD_DELAY)    += delay.o
 obj-$(CONFIG_KCMD_ECHO)     += echo.o
 obj-$(CONFIG_KCMD_EXIT)     += exit.o
-obj-$(CONFIG_KCMD_ERRNAME)	+= errname.o
+obj-$(CONFIG_KCMD_ENV)      += env.o
+obj-$(CONFIG_KCMD_ERRNAME)  += errname.o
 obj-$(CONFIG_KCMD_EXPORT)   += export.o
 obj-$(CONFIG_KCMD_FALSE)    += false.o
 obj-$(CONFIG_KCMD_FUNC)     += func.o
@@ -19,6 +20,7 @@ obj-$(CONFIG_KCMD_GOTO)     += goto.o
 obj-$(CONFIG_KCMD_GPIO)     += gpio.o
 obj-$(CONFIG_KCMD_GREP)     += grep.o
 obj-$(CONFIG_KCMD_HEAD)     += head.o
+obj-$(CONFIG_KCMD_LOCAL)    += local.o
 obj-$(CONFIG_KCMD_LOOP)     += loop.o
 obj-$(CONFIG_KCMD_LSPCI)    += lspci.o
 obj-$(CONFIG_KCMD_MATH)     += math.o
@@ -34,6 +36,7 @@ obj-$(CONFIG_KCMD_SEQ)      += seq.o
 obj-$(CONFIG_KCMD_SILENT)   += silent.o
 obj-$(CONFIG_KCMD_SLEEP)    += sleep.o
 obj-$(CONFIG_KCMD_SWITCH)   += switch.o
+obj-$(CONFIG_KCMD_SYMBOL)   += symbol.o
 obj-$(CONFIG_KCMD_TAIL)     += tail.o
 obj-$(CONFIG_KCMD_TIME)     += time.o
 obj-$(CONFIG_KCMD_TRUE)     += true.o
