--- a/.github/workflows/x86-defconfig.yml
+++ b/.github/workflows/x86-defconfig.yml
@@ -18,7 +18,7 @@ jobs:
         sudo apt update
         sudo apt install \
             make gcc flex bison gzip \
-            imagemagick u-boot-tools
+            gettext imagemagick u-boot-tools
     - name: make x86_defconfig
       run:  make x86_defconfig
     - name: make
