Function: Added initial kshell read command.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/usr/command/Kconfig
+++ b/usr/command/Kconfig
@@ -114,6 +114,10 @@ config KCMD_PRINTF
     bool "printf"
     default y
 
+config KCMD_READ
+    bool "read"
+    default y
+
 config KCMD_REBOOT
     bool "reboot"
     default y
