Function: Added initial dme1737 hwmon driver.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/configs/x86_defconfig
+++ b/configs/x86_defconfig
@@ -48,6 +48,7 @@ CONFIG_GPIO_PARALLEL=y
 CONFIG_HWMON=y
 CONFIG_HWMON_CORETEMP=y
 CONFIG_HWMON_DELL_SMM=y
+CONFIG_HWMON_DME1737=y
 
 CONFIG_I2C=y
 CONFIG_I2C_GPIO=y
