--- a/drivers/hwmon/Makefile
+++ b/drivers/hwmon/Makefile
@@ -4,3 +4,4 @@ obj-$(CONFIG_HWMON_AMD_K10) += amd-k10.o
 obj-$(CONFIG_HWMON_CORETEMP) += coretemp.o
 obj-$(CONFIG_HWMON_DELL_SMM) += dell-smm.o
 obj-$(CONFIG_HWMON_DHT11) += dht11.o
+obj-$(CONFIG_HWMON_DME1737) += dme1737.o
