--- a/usr/selftest/Kconfig
+++ b/usr/selftest/Kconfig
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 menuconfig KSH_SELFTEST
-    bool "Kernel Module Selftest"
+    bool "Kernel module selftest"
     depends on KSHELL
     default y
 if KSH_SELFTEST
