Maintain: Design new windowed extremum tracker.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/lib/filter/Makefile
+++ b/lib/filter/Makefile
@@ -1,2 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
-obj-y += ewma.o mean.o median.o pidc.o
+obj-y += ewma.o
+obj-y += mean.o
+obj-y += median.o
+obj-y += pidc.o
+obj-y += winext.o
