--- a/usr/selftest/filter/Makefile
+++ b/usr/selftest/filter/Makefile
@@ -3,3 +3,4 @@ obj-$(CONFIG_SELFTEST_FILTER_EWMA) += ewma.o
 obj-$(CONFIG_SELFTEST_FILTER_MEAN) += mean.o
 obj-$(CONFIG_SELFTEST_FILTER_MEDIAN) += median.o
 obj-$(CONFIG_SELFTEST_FILTER_PIDC) += pidc.o
+obj-$(CONFIG_SELFTEST_FILTER_WINEXT) += winext.o
