Function: Added the driver for dme1737 led.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/configs/x86_defconfig
+++ b/configs/x86_defconfig
@@ -61,6 +61,9 @@ CONFIG_INPUT_ATKBD=y
 CONFIG_INPUT_MOUSE=y
 CONFIG_INPUT_PSMSE=y
 
+CONFIG_LED=y
+CONFIG_LED_DME1737=y
+
 CONFIG_MFD=y
 CONFIG_MFD_ICH=y
 
