Function: Added the shortcut library malloc of kmalloc.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/lib/libc/Makefile
+++ b/lib/libc/Makefile
@@ -1,4 +1,9 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 ccflags-y := -Ofast
-obj-y += ctype.o string.o stdlib.o
-obj-y += stdio.o vsnprintf.o vsscanf.o
+obj-y += ctype.o
+obj-y += malloc.o
+obj-y += stdio.o
+obj-y += stdlib.o
+obj-y += string.o
+obj-y += vsnprintf.o
+obj-y += vsscanf.o
