--- a/drivers/watchdog/core/Makefile
+++ b/drivers/watchdog/core/Makefile
@@ -1,1 +1,3 @@
-obj-y += core.o device.o 
+# SPDX-License-Identifier: GPL-2.0-or-later
+obj-y += core.o ops.o
+obj-$(CONFIG_WATCHDOG_POWER) += power.o
