--- a/drivers/hwmon/Makefile
+++ b/drivers/hwmon/Makefile
@@ -5,3 +5,4 @@ obj-$(CONFIG_HWMON_CORETEMP) += coretemp.o
 obj-$(CONFIG_HWMON_DELL_SMM) += dell-smm.o
 obj-$(CONFIG_HWMON_DHT11) += dht11.o
 obj-$(CONFIG_HWMON_DME1737) += dme1737.o
+obj-$(CONFIG_HWMON_PCF8591) += pcf8591.o
