Function: Added timerqueue unit test.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/usr/selftest/lib/Kconfig
+++ b/usr/selftest/lib/Kconfig
@@ -94,6 +94,10 @@ config SELFTEST_LIB_SORT
     bool "Sort Unit Test"
     default y
 
+config SELFTEST_LIB_TQUEUE
+    bool "Timerqueue Unit Test"
+    default y
+
 config SELFTEST_LIB_UUID
     bool "UUID Unit Test"
     default y
