Function: Added basic arc4 algorithm support.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/lib/crypto/Makefile
+++ b/lib/crypto/Makefile
@@ -1,5 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += aes.o
+obj-y += arc4.o
 obj-y += ascii85.o
 obj-y += base32.o
 obj-y += base64.o
