Function: Added basic timecounter framework.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -64,6 +64,7 @@ obj-y += sort.o
 obj-$(CONFIG_STACKPROTECTOR) += stackprotector.o
 obj-y += stringhash.o
 obj-y += time.o
+obj-y += timecounter.o
 obj-y += timerqueue.o
 obj-y += uuid.o
 obj-y += xml.o
